# GlueCode

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  testGlueCode.cpp
test/: test.h
